Misc chnages
- Made BoundedHashMap class as a static class
- Fix URL validation